# template-hackathon-python-fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: main.py
app/logic/: __init__.py
tests/: test_main.http
